# txfm-repro

./: .gitignore  README.md  pyproject.toml
configs/: gene_ids_gencode_v36.json  mock.yaml  tcga_luad.yaml
dev_sandbox/: 01_explore_hf_stream.py  02_gene_universe_check.py  03_iterable_dataset_prototype.py  04_collate_through_dataloader.py  05_patient_split_hash.py
docs/: architecture.html
reference/: notes.md
scripts/: bench_activations.py  extract_embeddings.py  probe_embeddings.py
src/txfm_repro/: __init__.py  cli.py  lit_model.py  metrics.py  mock_data.py  tcga_data.py
tests/: test_extract_embeddings.py  test_metrics.py  test_model.py  test_sanity.py  test_tcga_data.py
